refactor: Switch to dataset node having an "Open" button instead of a menu fix: Continue investigating propack errors